# Training_UT_Long

./: .gitignore  IT_guiline.docx  README.md  R_IMPDRV_AttrSetClBrkAddr.docx  StepToImplementIT.docx  UT_note with R_IMPDRV_AttrSetClBrkAddr.docx  gdb use.txt  training_ut_it_Long.code-workspace_updateRCAR_V4M.code-workspace  ut note.docx
rcar-env/renesas/os/: CMakeLists.txt
rcar-env/renesas/os/bsp/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/bsp/emcos/: CMakeLists.txt
rcar-env/renesas/os/bsp/emcos/cmake/: emcos-aarch64-armclang-emcos-v3u-config.cmake  emcos-aarch64-armclang-emcos-v3u-export.cmake  emcos-aarch64-armclang-emcos-v4h-config.cmake  emcos-aarch64-armclang-emcos-v4h-export.cmake  emcos-config.cmake
rcar-env/renesas/os/bsp/emcos/patch/: 0001_init_thread.c.patch  0002_i2c.cfg.patch  0003_pdev_rcar4_v4h.c.patch  0004_renesas_isr_handler.h.patch  0005_CMakeLists.txt.patch  0006_CMakeLists.txt.patch  0007_renesas_pdev_vdsp_isr_handler.c.patch  0008_renesas_pdev_doc_isr_handler.c.patch  0009_renesas_pdev_dsi_isr_handler.c.patch  0010_renesas_pdev_dsc_isr_handler.c.patch  0011_renesas_pdev_vsp_isr_handler.c.patch  0012_renesas_pdev_imp_isr_handler.c.patch  0013_renesas_pdev_caiplite_isr_handler.c.patch  0014_renesas_pdev_pap_isr_handler.c.patch  0015_renesas_pdev_imr_isr_handler.c.patch  0016_renesas_pdev_vcp4_isr_handler.c.patch  0017_renesas_pdev_wwdt_isr_handler.c.patch  0018_renesas_pdev_vin_isr_handler.c.patch  0019_renesas_pdev_fbc_isr_handler.c.patch  0020_renesas_pdev_isp_isr_handler.c.patch  0021_renesas_pdev_visionip_isr_handler.c.patch  0022_renesas_isr_common.h.patch  0023_renesas_pdev_rfso_isr_handler.c.patch  0024_renesas_pdev_ivcp1e_isr_handler.c.patch  0025_renesas_pdev_du_isr_handler.c.patch  0026_renesas_pdev_csi_isr_handler.c.patch  0027_renesas_isr_common.c.patch  0028_renesas_pdev_icumx_isr_handler.c.patch  0029_renesas_pdev_iccom_isr_handler.c.patch
rcar-env/renesas/os/bsp/freertos/: CMakeLists.txt
rcar-env/renesas/os/bsp/freertos/h3/FreeRTOS/: kernel.mk
rcar-env/renesas/os/bsp/freertos/port/: FreeRTOS_tick_config.c  freeRTOSHooks.c  platform_post_lib_init.c
rcar-env/renesas/os/bsp/freertos/port/GCC/ARM_CA53_64_BIT/: portmacro.h
rcar-env/renesas/os/bsp/freertos/port/GCC/ARM_CA53_64_BIT_EL1/: port.c  portASM.S  portmacro.h
rcar-env/renesas/os/bsp/freertos/source/Source/: tasks.c
rcar-env/renesas/os/bsp/qnx/adas/gen3/: CMakeLists.txt
rcar-env/renesas/os/bsp/qnx/adas/gen3/src/: .project  Makefile  ReleaseNotes.txt  source.xml
rcar-env/renesas/os/bsp/qnx/adas/v4h/: CMakeLists.txt
rcar-env/renesas/os/bsp/qnx/adas/v4h/src/: .cproject  .project  Makefile  ReleaseNotes.txt  source.xml
rcar-env/renesas/os/bsp/qnx/gateway/: CMakeLists.txt
rcar-env/renesas/os/bsp/qnx/gateway/src/: .project  Makefile  ReleaseNotes.txt  source.xml
rcar-env/renesas/os/bsp/qnx/gateway/src/images/: Makefile  rcar_s4.build
rcar-env/renesas/os/bsp/qnx/gateway/src/src/: Makefile
rcar-env/renesas/os/bsp/qnx/gateway/test/functional_test/: CMakeLists.txt
rcar-env/renesas/os/bsp/qnx/gateway/test/static_test/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/bsp/zephyr/: CMakeLists.txt
rcar-env/renesas/os/bsp/zephyr/doc/release_note/: release_note.json
rcar-env/renesas/os/bsp/zephyr/patch/: base-commit.txt  bsp_zephyr_driver_package.patch  osal_zephyr_driver_package.patch  vsfwk_zephyr_driver_package.patch  zephyr_disable_i2c_and_du.patch
rcar-env/renesas/os/osal/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal/doc/doxygen/: doc_properties.json  overview.dox
rcar-env/renesas/os/osal/doc/release_note/: release_note.json
rcar-env/renesas/os/osal/include/rcar-xos/osal/: r_osal.h  r_osal_api.h  r_osal_def.h  r_osal_memory.hpp  r_osal_memory_impl.h  r_osal_types.h  r_osal_version.h
rcar-env/renesas/os/osal/sample_app/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal/sample_app/osal_sample_device/: CMakeLists.txt
rcar-env/renesas/os/osal/sample_app/osal_sample_memory/: CMakeLists.txt
rcar-env/renesas/os/osal/sample_app/osal_sample_resource/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal/test/functional_test/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal/test/static_test/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal/test/static_test/qac/: osal_wrapper_qac.acf
rcar-env/renesas/os/osal_configuration/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_dev_cfg/: CMakeLists.txt
rcar-env/renesas/os/osal_dev_cfg/include/rcar-xos/common/: drv.h
rcar-env/renesas/os/osal_dev_cfg/include/rcar-xos/isr/: isr.h
rcar-env/renesas/os/osal_dev_cfg/include/rcar-xos/pma/: r_pma.h
rcar-env/renesas/os/osal_usr_cfg/: CMakeLists.txt
rcar-env/renesas/os/osal_wrapper/: CMakeLists.txt  module.cmake  osallib_freertos.mk
rcar-env/renesas/os/osal_wrapper/doc/release_note/emcos/: release_note.json
rcar-env/renesas/os/osal_wrapper/doc/release_note/linux/: release_note.json
rcar-env/renesas/os/osal_wrapper/doc/release_note/qnx/: release_note.json
rcar-env/renesas/os/osal_wrapper/doc/release_note/simulator/: release_note.json
rcar-env/renesas/os/osal_wrapper/doc/release_note/zephyr/: release_note.json
rcar-env/renesas/os/osal_wrapper/lib/arm-gnu-freertos/: Makefile
rcar-env/renesas/os/osal_wrapper/test/functional_test/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_wrapper/test/static_test/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_wrapper/test/static_test/black_duck/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_wrapper/test/static_test/coverity/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_wrapper/test/static_test/freertos/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_wrapper/test/static_test/polyspace/: CMakeLists.txt  module.cmake
rcar-env/renesas/os/osal_wrapper/test/static_test/programsize/: 0001-StackSizeMeasurement-for-Linux.patch
rcar-env/renesas/os/osal_wrapper/test/static_test/qac/: CMakeLists.txt
rcar-env/renesas/os/osal_wrapper/test/unit_test/: CMakeLists.txt  module.cmake
(+4178 files in other folders)
